Need to rethink drawing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Javascript Body Tracking</title>
     </head>
     <body>
-        <canvas id="display" width="800" height="800" style="background-color: aquamarine;"></canvas>
+        <canvas id="display" width="800" height="800" ></canvas>
     </body>
     <script type="text/javascript" src="index.js"></script>
 </html>
